--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -32,7 +32,7 @@ Resources:
   BuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: !Sub "${FunctionName}-build-proj"
+      Name: !Sub ${FunctionName}-build-proj
       Description: Used to build function from the GitHub Repo
       ServiceRole: !Ref CodeBuildRoleArn
       TimeoutInMinutes: 10
@@ -53,7 +53,7 @@ Resources:
   PipelineProject:
     Type: AWS::CodePipeline::Pipeline
     Properties:
-      Name: !Sub "${FunctionName}-pl-proj"
+      Name: !Sub ${FunctionName}-pl-proj
       RoleArn: !Ref CodePipelineRoleArn
       ArtifactStore:
         Type: S3
@@ -104,7 +104,7 @@ Resources:
                 Provider: CloudFormation
                 Version: "1"
               Configuration:
-                StackName: !Sub "${FunctionName}-deploy-stack"
+                StackName: !Sub ${FunctionName}-deploy-stack
                 ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
                 TemplatePath: "LFBuild::output-template.yaml"
@@ -131,7 +131,7 @@ Resources:
       Authentication: GITHUB_HMAC
       AuthenticationConfiguration:
         SecretToken: !Ref GitHubOAuthToken
-      RegisterWithThirdParty: 'true'
+      RegisterWithThirdParty: "true"
       Filters:
         - JsonPath: "$.ref"
           MatchEquals: refs/heads/{Branch}
