--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -26,6 +26,8 @@ Parameters:
     Type: String
   BackendServiceBaseURL:
     Type: String
+  BackendServiceApiKeySecretArn:
+    Type: String
 
 Resources:
   # CodeBuild
@@ -113,6 +115,7 @@ Resources:
                   {
                     "FunctionName": "${FunctionName}",
                     "BackendServiceBaseURL": "${BackendServiceBaseURL}",
+                    "BackendServiceApiKeySecretArn": "${BackendServiceApiKeySecretArn}",
                     "Environment": "${Environment}",
                     "Application": "${Project}"
                   }'
